--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,13 +3,16 @@
 	padding: 0
 }
 div.container {
-	margin-top: 10%;
+	margin:0 auto;
+	margin-top: 5%;
 	padding: 15px;
 	background-color: #3f3b60;
 	/*background-image: url("idaptive.jpeg");*/
 	background-size: cover; 
 	width: 45vw;
 	height: auto;
+	 /*display: inline-block;
+	 position: relative;*/
 }
 label{
 	color: white;
@@ -26,7 +29,100 @@ label{
 }
 #idaptiveLogo{
 	right: 0;
+	/*margin-left: auto;
+  margin-right: auto;
+  display: block;*/
 }
 /*img{
 	width:40vw;
 }*/
+.loader {
+
+  /*width: 100px;
+  height: 100px;
+  margin: 0 auto;*/
+  margin-top:10%;
+  border: 8px solid #f3f3f3; /* Light grey */
+  border-top: 8px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  animation: spin 2s linear infinite;
+}
+
+/*@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}*/
+
+#processing{
+	padding-bottom: 20px;
+	display:none;
+}
+.barlittle {
+    background-color: #2187e7;
+    background-image: -moz-linear-gradient(45deg, #2187e7 25%, #a0eaff);
+    background-image: -webkit-linear-gradient(45deg, #2187e7 25%, #a0eaff);
+    border-left: 1px solid #111;
+    border-top: 1px solid #111;
+    border-right: 1px solid #333;
+    border-bottom: 1px solid #333;
+    width: 10px;
+    height: 10px;
+    float: left;
+    margin-left: 5px;
+    opacity: 0.1;
+    -moz-transform: scale(0.7);
+    -webkit-transform: scale(0.7);
+    -moz-animation: move 1s infinite linear;
+    -webkit-animation: move 1s infinite linear;
+}
+
+#block_1 {
+    -moz-animation-delay: .4s;
+    -webkit-animation-delay: .4s;
+}
+
+#block_2 {
+    -moz-animation-delay: .3s;
+    -webkit-animation-delay: .3s;
+}
+
+#block_3 {
+    -moz-animation-delay: .2s;
+    -webkit-animation-delay: .2s;
+}
+
+#block_4 {
+    -moz-animation-delay: .3s;
+    -webkit-animation-delay: .3s;
+}
+
+#block_5 {
+    -moz-animation-delay: .4s;
+    -webkit-animation-delay: .4s;
+}
+
+@-moz-keyframes move {
+    0% {
+        -moz-transform: scale(1.2);
+        opacity: 1;
+    }
+
+    100% {
+        -moz-transform: scale(0.7);
+        opacity: 0.1;
+    };
+}
+
+@-webkit-keyframes move {
+    0% {
+        -webkit-transform: scale(1.2);
+        opacity: 1;
+    }
+
+    100% {
+        -webkit-transform: scale(0.7);
+        opacity: 0.1;
+    };
+}
